# shindensei

./: .gitignore  README.md
.github/: FUNDING.yml
firmware/: README.md  ch32v20x_D8W.ld  ch32v20x_conf.h  cross.ini  main.c  meson.build
firmware/Debug/: debug.c  debug.h
firmware/UART/: PRINTF.h
firmware/USB_Device/: ch32v20x_usbfs_device.c
pcb/: NeoDK_PulseDischarge_simulation.kicad_sch  NeoDK_PulseDischarge_simulation.wbk  README.md  boost_simulation.kicad_sch  boost_simulation.wbk  feedback_simulation.kicad_sch  feedback_simulation.wbk  fp-lib-table  power_management.kicad_sch  pulse_control.kicad_sch  shindensei.kicad_prl  shindensei.kicad_pro  shindensei.kicad_sch  shindensei.kicad_wks  switch_matrix.kicad_sch  sym-lib-table
pcb/lib/: BH-18650-PC.kicad_sym  HX3608.kicad_sym  sgm61410.kicad_sym
pcb/lib/BH-18650-PC/: BAT_BH-18650-PC.kicad_mod  BH-18650-PC.step
pcb/sim/: 1N4148.lib  transformer1.lib
